SERVER-60956 Check edge case for collmod

(cherry picked from commit 8525925453c9a524f7d5c380132ec36b9eb5061c)