src/mongo/db/catalog/coll_mod.cpp
@@ -186,6 +186,10 @@ StatusWith<CollModRequest> parseCollModRequest(OperationContext* opCtx,
                                   "Please refer to the documentation and use the top-level "
                                   "'expireAfterSeconds' option instead");
                 }
+                if (coll->isCapped()) {
+                    return Status(ErrorCodes::InvalidOptions,
+                                  "TTL indexes are not supported for capped collections.");
+                }
                 if (auto status = index_key_validate::validateExpireAfterSeconds(
                         cmr.indexExpireAfterSeconds.safeNumberLong());
                     !status.isOK()) {
