jstests/core/collmod_convert_to_ttl.js
@@ -63,4 +63,15 @@ assert.commandFailedWithCode(
     db.runCommand(
         {"collMod": collName, "index": {"keyPattern": {_id: 1}, "expireAfterSeconds": 100}}),
     ErrorCodes.InvalidOptions);
+
+// Tries to convert an index on a capped collection to a TTL index.
+const collCapped = db.getCollection(collName + "_capped");
+collCapped.drop();
+db.createCollection(collCapped.getName(), {capped: true, size: 1024 * 1024});
+collCapped.createIndex({a: 1});
+assert.commandFailedWithCode(db.runCommand({
+    "collMod": collCapped.getName(),
+    "index": {"keyPattern": {a: 1}, "expireAfterSeconds": 100}
+}),
+                             ErrorCodes.InvalidOptions);
 })();
